B-F Sandbox Full-Backup/src/objects/Work_Package__c.object
<CustomObject>
    <description>A Work Package represents a logical grouping of functionality related an application. Multiple Open Item, Requirement, Use Case, and Test Case records can be associated to each Work Package, making it a very central object by which to track project progress.</description>
    <fields>
        <fullName>Application_Google_Site_Link__c</fullName>
        <label>Application Google Site Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>BF_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BF Task</label>
        <referenceTo>Task__c</referenceTo>
        <relationshipLabel>Application Work Packages</relationshipLabel>
        <relationshipName>Application_Work_Packages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Biz_Process_Design_Hrs_Remaining__c</fullName>
        <formula>Business_Design_Hours_1__c - (VALUE(CASE( Business_Process_Design_Completed__c, &quot;0%&quot;, &quot;0&quot;, &quot;25%&quot;, &quot;.25&quot;, &quot;50%&quot;, &quot;.5&quot;, &quot;75%&quot;, &quot;.75&quot;, &quot;100%&quot;, &quot;1&quot;, &quot;0&quot;)) * (Business_Design_Hours_1__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Biz Process Design Hrs Remaining</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Biz_Process_Design_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Biz Process Design Resource</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Work_Packages1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Design_Hours_1__c</fullName>
        <description>This field is used to enter the sum of Business Design hours from all requirements associated to this application work package.</description>
        <inlineHelpText>This field is used to enter the sum of Business Design hours from all requirements associated to this application work package.</inlineHelpText>
        <label>Business Design Hours</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Owner of the Application</description>
        <label>Business Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Application_Work_Packages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Process_Design_Completed__c</fullName>
        <label>% Business Process Design Completed</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>25%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Configuration_Completed__c</fullName>
        <label>% Configuration Completed</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>25%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Configuration_Hours_1__c</fullName>
        <description>This field is used to enter the sum of Configuration hours from all requirements associated to this application work package.</description>
        <inlineHelpText>This field is used to enter the sum of Configuration hours from all requirements associated to this application work package.</inlineHelpText>
        <label>Configuration Hours</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Configuration_Hrs_Remaining__c</fullName>
        <formula>Configuration_Hours_1__c - (VALUE(CASE( Configuration_Completed__c, &quot;0%&quot;, &quot;0&quot;, &quot;25%&quot;, &quot;.25&quot;, &quot;50%&quot;, &quot;.5&quot;, &quot;75%&quot;, &quot;.75&quot;, &quot;100%&quot;, &quot;1&quot;, &quot;0&quot;)) * ( Configuration_Hours_1__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Configuration Hrs Remaining</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Configuration_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Configuration Resource</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Work_Packages6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Development_Completed__c</fullName>
        <label>% Development Completed</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>25%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Development_Environment__c</fullName>
        <description>Environment(s) where development is being undertaken</description>
        <label>Development Environment(s)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Development_Hours_1__c</fullName>
        <description>This field is used to enter the sum of Development hours from all requirements associated to this application work package.</description>
        <inlineHelpText>This field is used to enter the sum of Development hours from all requirements associated to this application work package.</inlineHelpText>
        <label>Development Hours</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Development_Hrs_Remaining__c</fullName>
        <formula>Development_Hours_1__c - (VALUE(CASE(Development_Completed__c , &quot;0%&quot;, &quot;0&quot;, &quot;25%&quot;, &quot;.25&quot;, &quot;50%&quot;, &quot;.5&quot;, &quot;75%&quot;, &quot;.75&quot;, &quot;100%&quot;, &quot;1&quot;, &quot;0&quot;)) * (Development_Hours_1__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Development Hrs Remaining</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Development_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please Enter Primary</inlineHelpText>
        <label>Development Resource</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Work_Packages5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Estimated_Completion_Date__c</fullName>
        <label>Estimated Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Start_Date__c</fullName>
        <label>Estimated Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Functional_Review_Date__c</fullName>
        <label>Expected Functional Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_JAD_Date__c</fullName>
        <label>Expected JAD Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Technical_Review_Date__c</fullName>
        <label>Expected Technical Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_User_Acceptance_Test_Date__c</fullName>
        <label>Expected User Acceptance Test Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Force_com_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Force.com application which the work package is tied to</description>
        <label>Force.com Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipName>Work_Packages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Functional_Review_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Functional Review Completed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Info_Requirements_Completed__c</fullName>
        <label>% Requirements Completed</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>25%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interface_Systems__c</fullName>
        <description>Lists the systems the application will interface with as part of the scoped work package</description>
        <label>Interface Systems</label>
        <picklist>
            <picklistValues>
                <fullName>SAP R/3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Warehouse</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>JAD_Session_s_Conducted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>JAD Session(s) Conducted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_Objects__c</fullName>
        <inlineHelpText>Select potential objects that may be used. Field to be kept up-to-date by Data Architect</inlineHelpText>
        <label>Key Objects</label>
        <picklist>
            <picklistValues>
                <fullName>Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Brand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Depletion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Task</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Task Template</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mandatory Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offline Outlet Visit Item</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outlet Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outlet Class Market Definition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outlet Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outlet Visit Item</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preferred Visit Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promotion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promotion Activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promotion Goal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promotion Material Item</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promotion Result</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supplier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Task/ Event</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Offshore_Developer_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Offshore Developer Resource</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Work_Packages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipName>Work_Packages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requirements_Hours_1__c</fullName>
        <label>Requirements Hours</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Requirements_Hrs_Remaining__c</fullName>
        <formula>Requirements_Hours_1__c - (VALUE(CASE(Info_Requirements_Completed__c , &quot;0%&quot;, &quot;0&quot;, &quot;25%&quot;, &quot;.25&quot;, &quot;50%&quot;, &quot;.5&quot;, &quot;75%&quot;, &quot;.75&quot;, &quot;100%&quot;, &quot;1&quot;, &quot;0&quot;)) * (Requirements_Hours_1__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requirements Hrs Remaining</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Requirements_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requirements Resource</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Work_Packages2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Planning</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Requirements Gathering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Build</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Testing/ QA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready to be deployed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deployed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deployed, In Production</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tech_Design_Completed__c</fullName>
        <label>% Tech Design Completed</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>25%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tech_Design_Hrs_Remaining__c</fullName>
        <formula>Technical_Design_Hours_1__c  - (VALUE(CASE(Tech_Design_Completed__c  , &quot;0%&quot;, &quot;0&quot;, &quot;25%&quot;, &quot;.25&quot;, &quot;50%&quot;, &quot;.5&quot;, &quot;75%&quot;, &quot;.75&quot;, &quot;100%&quot;, &quot;1&quot;, &quot;0&quot;)) * (Technical_Design_Hours_1__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tech Design Hrs Remaining</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tech_Design_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tech Design Resource</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Work_Packages3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Technical_Design_Hours_1__c</fullName>
        <description>This field is used to enter the sum of Technical Design hours from all requirements associated to this application work package.</description>
        <inlineHelpText>This field is used to enter the sum of Technical Design hours from all requirements associated to this application work package.</inlineHelpText>
        <label>Technical Design Hours</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Technical_Review_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Technical Review Completed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Testing_Completed__c</fullName>
        <label>% Testing Completed</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Testing_Hours_1__c</fullName>
        <description>This field is used to enter the sum of Testing (System / UAT) hours from all requirements associated to this application work package.</description>
        <inlineHelpText>This field is used to enter the sum of Testing (System / UAT) hours from all requirements associated to this application work package.</inlineHelpText>
        <label>Testing Hours</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Level_of_Effort__c</fullName>
        <description>This field sums up the total # of hours for this Work Package.</description>
        <formula>Business_Design_Hours_1__c +  Configuration_Hours_1__c +  Development_Hours_1__c +  Technical_Design_Hours_1__c +  Testing_Hours_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Level of Effort</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Training_Deployment__c</fullName>
        <label>Training &amp; Deployment Hours</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Production Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhancement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Request</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Use_Cases_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Cases Completed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Acceptance_Testing_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>User Acceptance Testing Complete?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wireframes_included__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wireframes Included?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Work_Package_Name__c</fullName>
        <label>Work Package Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Application Work Package</label>
    <listViews>
        <fullName>AllWorkPackages</fullName>
        <columns>NAME</columns>
        <columns>Work_Package_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Estimated_Start_Date__c</columns>
        <columns>Estimated_Completion_Date__c</columns>
        <columns>Total_Level_of_Effort__c</columns>
        <columns>Release__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Work Packages</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Application_Work_Packages</fullName>
        <columns>NAME</columns>
        <columns>Work_Package_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Description__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Application Work Packages</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Ready_to_be_Deployed</fullName>
        <columns>NAME</columns>
        <columns>Work_Package_Name__c</columns>
        <columns>Description__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Ready to be deployed</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Work_Package__c.High,Work_Package__c.Low,Work_Package__c.Medium</value>
        </filters>
        <label>Ready to be Deployed</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>WP-{000}</displayFormat>
        <label>Application Work Package #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Work Packages</pluralLabel>
    <recordTypes>
        <fullName>High</fullName>
        <active>true</active>
        <description>High</description>
        <label>High</label>
    </recordTypes>
    <recordTypes>
        <fullName>High_Deployed</fullName>
        <active>true</active>
        <description>High Deployed</description>
        <label>High Deployed</label>
    </recordTypes>
    <recordTypes>
        <fullName>Low</fullName>
        <active>true</active>
        <description>Low</description>
        <label>Low</label>
    </recordTypes>
    <recordTypes>
        <fullName>Low_Deployed</fullName>
        <active>true</active>
        <description>Low Deployed</description>
        <label>Low Deployed</label>
    </recordTypes>
    <recordTypes>
        <fullName>Medium</fullName>
        <active>true</active>
        <description>Medium</description>
        <label>Medium</label>
    </recordTypes>
    <recordTypes>
        <fullName>Medium_Deployed</fullName>
        <active>true</active>
        <label>Medium Deployed</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Deployed_Locked</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Status__c , &quot;Deployed&quot;),ISCHANGED( Description__c ))</errorConditionFormula>
        <errorMessage>Work Package is already deployed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Milestones_Checked</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR( ISPICKVAL(Status__c,&quot;Ready to be deployed&quot;),ISPICKVAL(Status__c,&quot;In Production&quot;),ISPICKVAL(Status__c,&quot;Deployed&quot;)), OR( Technical_Review_Completed__c = false, Functional_Review_Completed__c = false,  JAD_Session_s_Conducted__c = false,  User_Acceptance_Testing_Complete__c  = false), OR($RecordType.DeveloperName = &quot;Medium&quot;,$RecordType.DeveloperName = &quot;High&quot;))</errorConditionFormula>
        <errorMessage>Please ensure all Milestones are completed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Status_Deployed</fullName>
        <active>true</active>
        <description>Status_Deployed</description>
        <errorConditionFormula>AND(ISCHANGED( Status__c ), 
TEXT(PRIORVALUE( Status__c )) = &apos;Deployed&apos;)</errorConditionFormula>
        <errorMessage>Busted....put it back to Deployed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Technical_Review</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR( ISPICKVAL(Status__c,&quot;Ready to be deployed&quot;),ISPICKVAL(Status__c,&quot;In Production&quot;),ISPICKVAL(Status__c,&quot;Deployed&quot;)),  Technical_Review_Completed__c = false, $RecordType.Name = &quot;Low&quot;)</errorConditionFormula>
        <errorMessage>Technical Review must be checked - Please contact the COE to ensure the Technical Review has been performed</errorMessage>
    </validationRules>
</CustomObject>